# django_barcode

./: .coverage  .gitignore  .travis.yml  README.md  README.rst  pyproject.toml  test_settings.py  tox.ini
django_barcode/: apps.py  core.py  fields.py  models.py  tests.py  urls.py  views.py
django_barcode/templates/: barcode_create.html  barcode_delete.html  barcode_detail.html  barcode_list.html  barcode_update.html
